gcc/testsuite/rust/rustc/ui/issues/issue-19734.rs
fn main() {}

struct Type;

impl Type {
    undef!();
// { dg-error "" "" { target *-*-* } .-1 }
}

